--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "preact": "^10.19.3",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^4.5.0"
   }
 }
